# MyProject_IMServer

./: README.md
EdoyumIMServer/: CMakeLists.txt  ClientSession.cpp  ClientSession.h  EdoyumIMServer.cpp  EdoyumIMTestClient.cpp  MySqlManager.cpp  QueryResult.cpp  QueryResult.h  UserManager.cpp  UserManager.h
EdoyumIMServer/FileServer/: FileMsg.h  FileSession.cpp  FileSession.h  main.cpp
